# virtual-ascii

./: .gitignore  Cargo.toml  LICENSE.md  README.md
assets/: virtual-ascii.desktop
src/: capture.rs  config.rs  control.rs  detect.rs  glyph_cache.rs  main.rs  output.rs  pipeline.rs  rain.rs  renderer.rs
src/gui/: app.rs  camera_check.rs  mod.rs  panels.rs  pipeline_bridge.rs  state.rs  v4l2_manager.rs
